# BA2015

./: .gitignore  README.md
implementation/DataCollection/: CMA.txt  CMA2.txt  CMA3.txt  CMA_HighEval.txt  CMA_theGRID.txt  CMA_vs_CE_round1.txt  CrossEntropy.txt  CrossEntropy_IgelTest.txt  CrossEntropy_rev.txt  Database_init  TetrisHardVersus.txt  meanPlot.py  meanPlotExpConf.py  runner.py
implementation/ExampleProject/: CMakeLists.txt  HelloWorld.cpp  MDPTetris.cpp  MDPTetris.h  cconfig.h.in  scaleTest.cpp
implementation/ExampleProject/CrossEntropy/: CrossEntropy.cpp  CrossEntropy.h
implementation/Experiments/: CMakeLists.txt  HelloWorld.cpp  MDPTetris.cpp  MDPTetris.h
implementation/Experiments/CrossEntropy/: CrossEntropy.cpp  CrossEntropy.h
implementation/Experiments/mdptetris/include/: config.h
implementation/Experiments/mdptetris/src/: strategy.c
projectDescription/: Approach.tex  LearningGoals.tex  Motivation.tex  PrevWork.tex  Requirements.tex  Scope.tex  Supervision.tex  Synopsis.tex
report/: Abstract.tex  Approach.tex  BSc2014.bib  CMA-ES.tex  Comparison.tex  Conclusion.tex  CrossEntropy.tex  CrossEntropyMethod.cpp  CrossEntropyMethod.h  ES.tex  Experiment.tex  Goals.tex  Hypothesis.tex  Introduction.tex  Objectivefunction.tex  Optimizers.tex  Preamble.tex  PrevWork.tex  Scope.tex  Symbols.tex  Symbolsection.tex  TetrisAgent.tex  appendixInitialSigma.tex  main.aux  main.bbl  main.blg  main.cb  main.cb2  main.tex  main.toc  plotData.tex  rapport_forside.docx  rapport_forside_science.docx  standaloneCompare.tex
report/Appendix/: Appendix.tex  appendixCEConfiguration.tex  appendixInitialSigma.tex  appendixLowerBound.tex
report/Background/: Background.tex  CMA-ES.tex  CrossEntropy.tex  MDP.tex  confidenceIntervals.tex  objectivefunction.tex  optimizers.tex  prevWork.tex  rl.tex  sampleNormalization.tex
report/Conclusion/: Conclusion.tex
report/Contribution/: Contribution.tex  comparison.tex  hypothesis.tex  implementCE.tex
report/Experiments/: Experiments.tex  InitialComparison.tex  comparisonFeatureset.tex  comparisons.tex  globalComparisonSettings.tex  mdpTetris.tex  optimalComparison.tex  optimalSettingsCE.tex  optimalSettingsCMA.tex  setup.tex  verifyCE.tex
report/FutureWork/: FutureWork.tex  Racing.tex  SearchSpace.tex  TetrisConfiguration.tex
report/Intro/: Introduction.tex  goals.tex  intro.tex  rl.tex  scope.tex
report/data/: ce_sigma100_cnoise4_10.txt  ce_sigma100_cnoise4_2.txt  ce_sigma100_cnoise4_5.txt  ce_sigma100_cnoise4_7.txt
report/data/CMA_00/: cma_sigma_0_5_0.txt  cma_sigma_0_5_1.txt  cma_sigma_0_5_2.txt  cma_sigma_0_5_5.txt  cma_sigma_0_5_6.txt  cma_sigma_0_5_9.txt  cma_sigma_0_5_mean.txt
report/data/Cemeans/: constantNoise.txt  linearNoise.txt  noNoise.txt
report/data/ConstantNoise/: ce_ConstantNoise_0.txt  ce_ConstantNoise_1.txt  ce_ConstantNoise_2.txt  ce_ConstantNoise_3.txt  ce_ConstantNoise_4.txt  ce_ConstantNoise_5.txt  ce_ConstantNoise_6.txt  ce_ConstantNoise_7.txt  ce_ConstantNoise_8.txt  ce_ConstantNoise_9.txt  ce_sigma100_cnoise4_0.txt  ce_sigma100_cnoise4_1.txt  ce_sigma100_cnoise4_3.txt  ce_sigma100_cnoise4_4.txt  ce_sigma100_cnoise4_6.txt  ce_sigma100_cnoise4_8.txt  ce_sigma100_cnoise4_9.txt  mean.txt
report/data/CrossEntropyConfiguration/: ce_ConstantNoise_l100_o50_0.txt  ce_ConstantNoise_l100_o50_1.txt  ce_ConstantNoise_l100_o50_2.txt  ce_ConstantNoise_l100_o50_3.txt  ce_ConstantNoise_l100_o50_4.txt  ce_ConstantNoise_l100_o50_5.txt  ce_ConstantNoise_l100_o50_6.txt  ce_ConstantNoise_l100_o50_7.txt  ce_ConstantNoise_l100_o50_8.txt  ce_ConstantNoise_l100_o50_9.txt  ce_ConstantNoise_l100_o50_mean.txt  ce_ConstantNoise_l10_o1_0.txt  ce_ConstantNoise_l10_o1_1.txt  ce_ConstantNoise_l10_o1_2.txt  ce_ConstantNoise_l10_o1_3.txt  ce_ConstantNoise_l10_o1_4.txt  ce_ConstantNoise_l10_o1_5.txt  ce_ConstantNoise_l10_o1_6.txt  ce_ConstantNoise_l10_o1_7.txt  ce_ConstantNoise_l10_o1_8.txt  ce_ConstantNoise_l10_o1_9.txt  ce_ConstantNoise_l10_o1_mean.txt  ce_ConstantNoise_l10_o5_0.txt  ce_ConstantNoise_l10_o5_1.txt  ce_ConstantNoise_l10_o5_2.txt  ce_ConstantNoise_l10_o5_3.txt  ce_ConstantNoise_l10_o5_4.txt  ce_ConstantNoise_l10_o5_5.txt  ce_ConstantNoise_l10_o5_6.txt  ce_ConstantNoise_l10_o5_7.txt  ce_ConstantNoise_l10_o5_8.txt  ce_ConstantNoise_l10_o5_9.txt  ce_ConstantNoise_l10_o5_mean.txt  ce_ConstantNoise_l200_o100_0.txt  ce_ConstantNoise_l200_o100_1.txt  ce_ConstantNoise_l200_o100_2.txt  ce_ConstantNoise_l200_o100_3.txt  ce_ConstantNoise_l200_o100_4.txt  ce_ConstantNoise_l200_o100_5.txt  ce_ConstantNoise_l200_o100_6.txt  (+59 more)
report/data/FeaturesetCompare/: README.txt  _ce_bert_hard_ConstantNoise_mean.txt  _ce_bert_hard_LinearNoise_mean.txt  _ce_bert_hard_NoNoise_mean.txt  _ce_dell_ConstantNoise_mean.txt  _ce_dell_LinearNoise_mean.txt  (+240 more)
report/plots/: README.txt  TunedPlot.tex  ce_ConstantNoise_l100_o10_all.tex  ce_ConstantNoise_l100_o25_all.tex  ce_ConstantNoise_l100_o50_all.tex  ce_ConstantNoise_l10_o1_all.tex  ce_ConstantNoise_l10_o5_all.tex  ce_ConstantNoise_l12_o1_all.tex  ce_ConstantNoise_l12_o3_all.tex  ce_ConstantNoise_l12_o6_all.tex  ce_ConstantNoise_l13_o6_all.tex  ce_ConstantNoise_l200_o100_all.tex  ce_ConstantNoise_l200_o20_all.tex  ce_ConstantNoise_l200_o50_all.tex  ce_ConstantNoise_l22_o11_all.tex  ce_ConstantNoise_l22_o2_all.tex  ce_ConstantNoise_l22_o5_all.tex  ce_ConstantNoise_l50_o12_all.tex  ce_ConstantNoise_l50_o25_all.tex  ce_ConstantNoise_l50_o5_all.tex  ce_tuned_all.tex  cmaCePlot.tex  cma_initial_sigma_0_1.tex  cma_initial_sigma_0_2.tex  cma_initial_sigma_0_5.tex  cma_initial_sigma_0_8.tex  cma_initial_sigma_1_0.tex  cma_lower_bound_0_5.tex  cma_lower_bound_2_0.tex  cma_lower_bound_4_0.tex  cma_tuned_all.tex  constantNoisePlot.tex  figureCompile.py  linearNoisePlot.tex  meansPlot.tex  noNoisePlot.tex  plotBertsekasCmaVsCEHardTetris.tex  plotData.tex  plotDellCmaVsCEHardTetris.tex
(+737 files in other folders)
